[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "variconf"
description = """\
    Wrapper around OmegaConf for loading configuration from various types of \
    files.\
    """
authors = [
    {name = "Felix Kloss", email = "felix.widmaier@tue.mpg.de"},
]
maintainers = [
    {name = "Felix Kloss", email = "felix.widmaier@tue.mpg.de"}
]
readme = "README.md"
keywords = ["config", "configuration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
urls.Source = "https://github.com/MPI-IS/variconf"
urls."Bug Tracker" = "https://github.com/MPI-IS/variconf/issues"
dynamic = ["version"]

requires-python = ">=3.7"
dependencies = [
    "omegaconf",
]

[project.optional-dependencies]
all = ["variconf[toml,yaml]"]
toml = ["tomli"]
yaml = ["pyyaml"]

test = ["variconf[all]", "pytest"]
# include test dependencies for mypy, so tests can be checked as well
mypy = ["variconf[test]", "mypy", "types-PyYAML", "types-setuptools"]

[tool.setuptools.dynamic]
version = {attr = "variconf.__version__"}

[tool.setuptools.package-data]
variconf = ["py.typed"]


[tool.ruff]
# it's easier to select all and then disable the undesired ones
select = ["ALL"]
extend-ignore = [
    "BLE",
    "COM",
    "EM",
    "FBT",
    "INP",
    "PTH",
    "S",
    "T20",
    "UP",
    "ANN101",
    "ANN102",
    "ANN401",
    "D100",
    "D107",
    "D205",
    "D212",
    "G004",
    "I001",
    "N806",
    "PTH123",
    "TRY003",
    "TRY301",
    "TRY400",
]
line-length = 88  # black
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"test/*" = ["ANN", "D", "SLF", "PLR2004"]


[[tool.mypy.overrides]]
module = ["lxml", "omegaconf.*"]
ignore_missing_imports = true
